# inter_process_communication

01-fork/: fork_1.c  fork_2.c
02-exec/: exec_1.c  message.c
03-wait/: message.c  wait_1.c  wait_2.c
04-daemon/: daemon.c
05-lib_hardware/: CMakeLists.txt
05-lib_hardware/include/: button.h  gpio.h  led.h
05-lib_hardware/src/: button.c  gpio.c  led.c
05-lib_hardware/unit_test/: test.c
06-template/: CMakeLists.txt  Dockerfile
06-template/docker-script/: build.sh  send_data.sh
06-template/include/: button_base.h  button_process.h  consumer.h  led_base.h  led_process.h  producer.h
06-template/src/: consumer.c  producer.c
06-template/src/platform/docker/: launch_processes.c
06-template/src/platform/docker/button/: button_main.c
06-template/src/platform/docker/led/: led_main.c
06-template/src/platform/pc/button/: button_pc.h
07-pipe/: CMakeLists.txt
07-pipe/docker-script/: build.sh  run.sh  send_data.sh  stop.sh
07-pipe/include/: button_process.h  consumer.h  led_process.h  producer.h
07-pipe/script/: kill_application.sh
07-pipe/src/: button_process.c  consumer.c  launch_processes.c  led_process.c  producer.c
07-pipe/src/platform/docker/led/: led_pc.h  led_process.c
07-pipe/src/platform/pc/: button_process.c  led_process.c
07-pipe/src/platform/pc/button/: button_process.c
07-pipe/src/platform/pc/led/: led_process.c
07-pipe/src/platform/raspberry/button/: button_main.c  button_process.c
08-fifo/: CMakeLists.txt  Dockerfile
08-fifo/docker-script/: config.sh  daemon.json  run.sh  send_data.sh  stop.sh
08-fifo/include/: consumer.h  definitions.h
08-fifo/lib/: CMakeLists.txt  fifo.c  fifo.h
08-fifo/script/: kill_application.sh
08-fifo/src/: consumer.c  producer.c
08-fifo/src/platform/docker/: launch_processes.c
08-fifo/src/platform/pc/: launch_processes.c
08-fifo/src/platform/raspberry/led/: led_process.c
09-shared_file/: CMakeLists.txt
09-shared_file/docker-script/: daemon.json  send_data.sh
09-shared_file/include/: consumer.h  definition.h  led_base.h  producer.h
09-shared_file/lib/: CMakeLists.txt  shared_file.c  shared_file.h
09-shared_file/src/: consumer.c  producer.c
09-shared_file/src/platform/: led_process.h
09-shared_file/src/platform/docker/: launch_processes.c
09-shared_file/src/platform/docker/button/: button_main.c
09-shared_file/src/platform/pc/: launch_processes.c
09-shared_file/src/platform/pc/led/: led_process.c
10-signal/docker-script/: config.sh
10-signal/include/: consumer.h  producer.h
10-signal/src/: consumer.c  producer.c
10-signal/src/platform/: button_process.h
10-signal/src/platform/docker/: launch_processes.c
10-signal/src/platform/pc/: launch_processes.c
10-signal/src/platform/raspberry/led/: led_main.c
